gccida/c3/ecleaz
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ecleaz/src/real.c:2329:12: error: expected expression
*( _OWORD *)xi = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ecleaz/src/real.c:2329:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)xi = 0LL; 
   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ecleaz/src/obj/real.o] Error 1
